--- a/style.css
+++ b/style.css
@@ -63,12 +63,12 @@ body{
   }  
 
   .panel{
+    height: 90vh;
     margin: 2.3px;
     flex: 0.3;
   }
 
     body{
-        height: 90vw;
         overflow: hidden;
     }
 }
