--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 body{
     display: flex;
-    height: 93vh;
+    height: 100vh;
 
     justify-content: center;
     align-items: center;
@@ -68,4 +68,8 @@ body{
     margin: 2.3px;
     flex: 0.3;
   }
+
+    body{
+        height: 93vh;
+    }
 }
